--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 [Bb]uild/
 [Bb]uilds/
 [Ll]ogs/
+[Uu]serSettings/
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # [Aa]ssets/AssetStoreTools*
@@ -46,3 +47,5 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
+
+
