--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "com.unity.2d.sprite": "file:D:/GithubDesktop/clone/thief/Library/PackageCache/com.unity.2d.sprite@1.0.0",
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.collab-proxy": "1.5.7",
     "com.unity.ide.rider": "3.0.6",
     "com.unity.ide.visualstudio": "2.0.8",
@@ -10,6 +10,7 @@
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.5.5",
     "com.unity.ugui": "1.0.0",
+    "com.unity.ui": "1.0.0-preview.14",
     "com.unity.visualscripting": "1.6.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
